# soroban-chat

./: Cargo.toml  README.md  test.sh
.soroban/: ledger.json
.soroban/identity/: admin.toml  rpciege.toml  user_a.toml
.soroban/network/: rpciege_net.toml  testnet.toml
src/: lib.rs  types.rs
