[package]
name = "soroban-chat"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
 
 
 

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[dependencies]
soroban-sdk = "20.0.0"
